--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@
             <nav>
                 <ul id="bar">
                     <li>
-                        <a href="/about.html">WHO WE ARE </a>
+                        <a href="about.html">WHO WE ARE </a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/what.html">WHAT WE DO</a>
+                        <a href="what.html">WHAT WE DO</a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/#">NEWS & EVENTS</a>
+                        <a href="#">NEWS & EVENTS</a>
                     </li>
                     <li>|</li>
                     <li>
@@ -102,15 +102,15 @@
             <footer>
                 <ul>
                     <li>
-                        <a href="/index.html">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/about.html">WHO WE ARE</a>
+                        <a href="about.html">WHO WE ARE</a>
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/what.html">WHAT WE DO</a>
+                        <a href="what.html">WHAT WE DO</a>
                     <li>-</li>
                     <li>
                         <a href="#">NEWS & EVENTS</a>
