--- a/what.html
+++ b/what.html
@@ -24,11 +24,11 @@
             <nav>
                 <ul id="bar">
                     <li>
-                        <a href="/about.html">WHO WE ARE </a>
+                        <a href="about.html">WHO WE ARE </a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="/what.html">WHAT WE DO</a>
+                        <a href="what.html">WHAT WE DO</a>
                     </li>
                     <li>|</li>
                     <li>
@@ -103,15 +103,15 @@
             <footer>
                 <ul>
                     <li>
-                        <a href="/index.html">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/about.html">WHO WE ARE</a>
+                        <a href="about.html">WHO WE ARE</a>
                     </li>
                     <li>-</li>
                     <li>
-                        <a href="/what.html">WHAT WE DO</a>
+                        <a href="what.html">WHAT WE DO</a>
                     <li>-</li>
                     <li>
                         <a href="#">NEWS & EVENTS</a>
